--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head> 
+      <link rel="stylesheet" href="style.css" />
       <title>Greg's Web Site</title>
   </head>
   <body>
       <h1>Greg's Web Site</h1>
+      <script src="index.js"></script>
   </body>
 </html>
 
